# AstroPhotoStacker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yaml
CI_tests/headers/: AsterismHashTests.h  HotPixelIdentification_test.h  ImageReadingTest.h  KDTreeTest.h  TestAlignmentResult.h  TestFitFileSaver.h  TestLocalShifts.h  TestMetadataReader.h  TestUtils.h
CI_tests/python/: compare_files.py
CI_tests/src/: AsterismHashTests.cxx  HotPixelIdentification_test.cxx  ImageReadingTest.cxx  KDTreeTest.cxx  TestAlignmentResult.cxx  TestFitFileSaver.cxx  TestLocalShifts.cxx  TestMetadataReader.cxx  TestUtils.cxx
CI_tests/utils/: tests.cxx
GUI/: CMakeLists.txt  README.md
GUI/headers/: AlignedImagesProducerGUI.h  AlignmentFrame.h  AlignmentPointsDrawing.h  ColorStretching.h  CombinedColorStrecherTool.h  CometSelectionFrame.h  Common.h  FileTypes.h  FilelistHandler.h  FilelistHandlerGUIInterface.h  FloatingPointSlider.h  FrameType.h  FramesCheckbox.h  HistogramDataTool.h  HistogramDataToolGUI.h  ImagePreview.h  ImagePreviewCometSelectionTool.h  ImagePreviewCropTool.h  ImagePreviewGridSelector.h  ImageResizeTool.h  ImageViewerApp.h  IndividualColorStretchingBlackCorrectionWhite.h  IndividualColorStretchingBlackMidtoneWhite.h  IndividualColorStretchingToolBase.h  InputFile.h  LensCorrectionsTooolGUI.h  LightPollutionRemovalToolGUI.h  ListFrame.h  MainFrame.h  MetadataManager.h  PhotoGroupingTool.h  PostProcessingTool.h  PostProcessingToolGUI.h  ProgressBarWindow.h  RecentPathsHandler.h  SettingsCustomization.h  SettingsCustomizationGUI.h  StackSettings.h  StackSettingsSaver.h  StackerConfigureTool.h  (+2 more)
GUI/src/: AlignedImagesProducerGUI.cxx  AlignmentFrame.cxx  CometSelectionFrame.cxx  FileTypes.cxx  FilelistHandler.cxx  FilelistHandlerGUIInterface.cxx  FloatingPointSlider.cxx  FrameType.cxx  FramesCheckbox.cxx  HistogramDataTool.cxx  HistogramDataToolGUI.cxx  ImagePreview.cxx  ImagePreviewCometSelectionTool.cxx  ImagePreviewCropTool.cxx  ImagePreviewGridSelector.cxx  ImageResizeTool.cxx  ImageViewerApp.cxx  InputFile.cxx  LensCorrectionsToolGUI.cxx  LightPollutionRemovalToolGUI.cxx  ListFrame.cxx  MainFrame.cxx  MetadataManager.cxx  PhotoGroupingTool.cxx  PostProcessingTool.cxx  PostProcessingToolGUI.cxx  ProgressBarWindow.cxx  RecentPathsHandler.cxx  SettingsCustomization.cxx  SettingsCustomizationGUI.cxx  StackSettings.cxx  StackSettingsSaver.cxx  StackerConfigureTool.cxx  SummaryYamlCreator.cxx  ThreePointSlider.cxx
GUI/utils/: image_viewer.cxx  main.cxx  tests.cxx
docs/: GUI.md
headers/: AdditionalStackerSetting.h  AdditionalStackerSettingNumerical.h  AdditionalStackerSettingsBool.h  AlignedImagesProducer.h  AlignmentPointBox.h  AlignmentPointBoxGrid.h  AlignmentResultBase.h  AlignmentResultDummy.h  AlignmentResultFactory.h  AlignmentResultPlateSolving.h  AlignmentResultSurface.h  AlignmentResultTranslationOnly.h  AlignmentSettingsSurface.h  AlignmentWindow.h  AsterismHasher.h  CalibratedPhotoHandler.h  CalibratedPhotoScoreHandler.h  CalibrationFrameBase.h  ColorInterpolationTool.h  Common.h  CommonImageOperations.h  ConfigurableAlgorithmSettings.h  ConvertToFitFile.h  CudaSmartPointers.hxx  CustomScopeMutex.h  CustomSharedMutex.h  DSLR_and_SLR_raw_file_reader.h  DarkFrameHandler.h  Debayring.h  FilelistHandler.h  FitFileMetadataReader.h  FitFileReader.h  FitFileSaver.h  Fitter.h  FlatFrameHandler.h  FrameReaderBase.h  FrameStatistics.h  FrameType.h  GaussianBlur.h  GeometricTransformations.h  (+82 more)
python/: adjust_flat_frame.py  align_all_video_files.py  combine_comet_and_stars.py  convert_firecapture_txt_to_zwo_txt.py  drop_rotation.py  make_timelapse_video.py  merge_alignment_files.py  resize_flat_frame.py
python/development/: create_stars_matching_hash.py  shorten_video.py
src/: AlignedImagesProducer.cxx  AlignmentPointBox.cxx  AlignmentPointBoxGrid.cxx  AlignmentResultBase.cxx  AlignmentResultFactory.cxx  AlignmentResultPlateSolving.cxx  AlignmentResultSurface.cxx  AlignmentResultTranslationOnly.cxx  AlignmentSettingsSurface.cxx  AsterismHasher.cxx  CalibratedPhotoHandler.cxx  CalibratedPhotoScoreHandler.cxx  CalibrationFrameBase.cxx  ColorInterpolationTool.cxx  Common.cxx  CommonImageOperations.cxx  ConfigurableAlgorithmSettings.cxx  ConvertToFitFile.cxx  DSLR_and_SLR_raw_file_reader.cxx  DarkFrameHandler.cxx  Debayering.cxx  FilelistHandler.cxx  FitFileMetadataReader.cxx  FitFileReader.cxx  FitFileSaver.cxx  Fitter.cxx  FlatFrameHandler.cxx  FrameReaderBase.cxx  FrameType.cxx  GaussianBlur.cxx  HotPixelIdentifier.cxx  ImageFilesInputOutput.cxx  ImageRanking.cxx  ImageStretching.cxx  InputArgumentsParser.cxx  InputFormatTypes.cxx  InputFrameReader.cxx  KDTree.cxx  LensCorrectionsTool.cxx  LightPollutionGradientFunctions.cxx  (+63 more)
utils/: align_and_save_best_n_frames_from_video.cxx  align_rgb_channels.cxx  astro_photo_stacker.cxx  calculate_noise.cxx  convert_raw_to_jpg.cxx  convert_to_fit_file.cxx  create_synthetic_flat.cxx  filter_video.cxx  identify_hot_pixels.cxx  main.cxx  produce_alignment_file.cxx  rank_sharpness.cxx  stack_calibration_frames.cxx  test_local_shifts.cxx  tests.cxx  update_bayer_patter_in_ser_file.cxx
